build: Upgrade dependencies